Fix backend compile breakage, dedupe appointment module, restyle new UI screens to compact design system
Backend fixes (service now compiles cleanly; was broken):
- Replace nonexistent APIs across nursing/ot/tpa/staff/notification/discharge/billing-portal modules:
  ApiException -> BusinessException, common.ApiResponse -> dto.ApiResponse with respond() helper,
  OutboxPublisher -> OutboxEventService.publish(aggregate, id, event, payload),
  injected TenantContext -> static TenantContext.get(), getCurrentUserId() -> Long.parseLong(getUserId()),
  AuditService.log(...) -> audit(entityType, id, action, before, after, correlationId)
- Remove duplicate trailing block in NursingController (syntax error)
- Remap new staff module to /api/v1/staff-management (collision with auth staff directory)
- Delete duplicate appointment module: OPD already owns the appointment table and booking flow;
  added missing list-by-patient and cancel endpoints to OPD additively
- PatientPortalService rewritten against real PatientBill/HospitalCharge fields (DRAFT/FINAL/CANCELLED
  statuses, netAmount, ERP invoice refs); payment history stubbed pending ERP ledger integration
- V1_016 migration: staff, notification, discharge_summary tables + backfill missing BaseEntity
  columns (status, created_by, updated_by) on nursing_indent_item, surgery_note, anesthesia_record,
  tpa_document (ddl-auto=validate would fail without them)
- Front desk granted list/cancel on appointments

UI completion + compact professional restyle (all new screens now follow the design system:
PageContainer in role shells, dense ListView rows with StatusChip, MessageBanner feedback,
inline expandable detail instead of full-screen pushes, no hardcoded colors):
- TPA management: status filter chips, expandable case rows with document checklist and stage actions
- Staff management: dense directory rows, inline editor with permission chips, compact add dialog
- Notification center: bell with unread badge + anchored compact pane